# verus-etags

./: .gitignore  Cargo.toml  README.md  total_order_refined.rs  total_order_struct.rs  total_order_trait.rs
src/: main.rs  tag_visitor.rs
test_data/: another.rs  sample.rs  simple.rs
tests/: byte_offset_test.rs  cli_switches_test.rs  emacs_temp_files_test.rs  integration_test.rs  tag_ordering_test.rs  verus_syntax_test.rs
