[package]
name = "verus-etags"
version = "1.0.0"
edition = "2021"

[dependencies]
verus_syn = { path = "verus-lang/dependencies/syn", package = "verus_syn", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
